[package]
name = "tokio-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0.163", features = ["derive", "serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
warp = "0.3.5"
